--- a/Challenges/Day 2 - Creative Menu Item Hover Effects/index.html
+++ b/Challenges/Day 2 - Creative Menu Item Hover Effects/index.html
@@ -3,17 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css">
     <title>Creative Menu Item Hover Effects</title>
   </head>
   <body>
-   <ul>
-     <li>
-       <a href="#">
-         <span>Home</span>
-         <span>Home</span>
+    <ul>
+      <li>
+        <a href="#">
+          <span>Home</span>
+          <span>Home</span>
         </a>
       </li>
-   </ul>
-    
+      <li>
+        <a href="#">
+          <span>About</span>
+          <span>About</span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <span>Portifolio</span>
+          <span>Portifolio</span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <span>Team</span>
+          <span>Team</span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <span>Contact</span>
+          <span>Contact</span>
+        </a>
+      </li>
+    </ul>
   </body>
 </html>
