modify top margin card

--- a/Challenges/Day 10 - Card Hover Effects/index.html
+++ b/Challenges/Day 10 - Card Hover Effects/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="content">
         <h2>Card One</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus cumque quod unde magnam numquam quo sint voluptatem, quam facilis incidunt.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus cumque quod unde magnam numquam quo sint voluptatem.</p>
       </div>
     </div>
     <div class="card">
@@ -27,7 +27,7 @@
       </div>
       <div class="content">
         <h2>Card Two</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus cumque quod unde magnam numquam quo sint voluptatem, quam facilis incidunt.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus cumque quod unde magnam numquam quo sint voluptatem.</p>
       </div>
     </div>
     <div class="card">
@@ -36,7 +36,7 @@
       </div>
       <div class="content">
         <h2>Card Three</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus cumque quod unde magnam numquam quo sint voluptatem, quam facilis incidunt.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus cumque quod unde magnam numquam quo sint voluptatem.</p>
       </div>
     </div>
   </div>
