--- a/Challenges/Day 11 - LinkedIn Loading Animation/index.html
+++ b/Challenges/Day 11 - LinkedIn Loading Animation/index.html
@@ -10,7 +10,7 @@
     <div class="loading-screen">
        <div class="loading-animation">
          <img src="./img/logo.png" alt="Logo" class="logo">
-         <div class="loadind bar"></div>
+         <div class="loading-bar"></div>
        </div>
     </div>
 </body>
