done html structure

--- a/Challenges/Day 12 - Pixel Button Hover Animation/index.html
+++ b/Challenges/Day 12 - Pixel Button Hover Animation/index.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
-  <title>Pixel Button Hover Animation </title>
+  <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+  <title>Pixel Button Hover Effects </title>
 </head>
 <body>
-  
+  <a href="#">Pixel Button</a>
+  <a href="#">Hover Effects</a>
 </body>
 </html>
