--- a/Challenges/Day 13 - Icon Hover Effects/index.html
+++ b/Challenges/Day 13 - Icon Hover Effects/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div class="banner">
+        <video autoplay muted loop>
+            <source src="./img/video.mp4" type="video/mp4">
+        </video>
         <i class="fa fa-facebook" aria-hidden="true"></i>
         <i class="fa fa-twitter" aria-hidden="true"></i>
     </div>
