--- a/Challenges/Day 14 - Pure CSS Smiley Rating Bar/index.html
+++ b/Challenges/Day 14 - Pure CSS Smiley Rating Bar/index.html
@@ -22,7 +22,7 @@
       <img src="./img/2.png" alt="star2">
       <h4>Crazy</h4>
     </label>
-    <input type="radio" name="star" id="star3">
+    <input type="radio" name="star" id="star3" checked="checked">
     <label for="star3">
       <img src="./img/3.png" alt="star3">
       <h4>Happy</h4>
