done html structure and css style

--- a/Challenges/Day 17 - Text Typing Menu Item Hover Effects/index.html
+++ b/Challenges/Day 17 - Text Typing Menu Item Hover Effects/index.html
@@ -12,12 +12,12 @@
 </head>
 <body>
     <ul>
-      <li><a href="#" data-text="Home">Home</a></li>
-      <li><a href="#" data-text="Home">About</a></li>
-      <li><a href="#" data-text="Home">Services</a></li>
-      <li><a href="#" data-text="Home">Typing</a></li>
-      <li><a href="#" data-text="Home">Our Team</a></li>
-      <li><a href="#" data-text="Home">Contact Us</a></li>
+      <li><span>&times;</span><a href="#" data-text="Home">Home</a></li>
+      <li><span>&times;</span><a href="#" data-text="About">About</a></li>
+      <li><span>&times;</span><a href="#" data-text="Services">Services</a></li>
+      <li><span>&times;</span><a href="#" data-text="Typing Menu">Typing Menu</a></li>
+      <li><span>&times;</span><a href="#" data-text="Our Team">Our Team</a></li>
+      <li><span>&times;</span><a href="#" data-text="Contact Us">Contact Us</a></li>
     </ul>
 </body>
 </html>
