--- a/Challenges/Day 21 - Change Language Toggle/index.html
+++ b/Challenges/Day 21 - Change Language Toggle/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <span class="en">English</span>
     <input type="checkbox" class="check">
-    <span class="en">Português</span>
+    <span class="pt">Português</span>
     <div class="content contentEnglish">
       <h2>English</h2>
       <p>Cascading Style Sheets is a mechanism for adding style to a web document. The CSS code can be applied directly to the tags or be contained within the tags. It is also possible, instead of placing the formatting inside the document, to link to a CSS file that contains the styles. </p>
